compleat task one

--- a/index.html
+++ b/index.html
@@ -76,8 +76,72 @@
       <div class="container">
         <div class="title">
           <h5>why this is Awesome</h5>
+          <hr class="borderTitle" />
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
+
+        <div class="box">
+          <div class="card">
+            <div class="icon">
+              <i class="fa-regular fa-lightbulb"></i>
+            </div>
+            <div class="card-Body">
+              <h5>thoughtful desing</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                nesciunt id eaque consequuntur. Officiis maiores odit in, error
+                suscipit necessitatibus aliquam? Ea, laudantium!
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="icon">
+              <i class="fa-regular fa-keyboard"></i>
+            </div>
+            <div class="card-Body">
+              <h5>well crafted</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                nesciunt id eaque consequuntur. Officiis maiores odit in, error
+                suscipit necessitatibus aliquam? Ea, laudantium!
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="icon">
+              <i class="fa-solid fa-bolt"></i>
+            </div>
+            <div class="card-Body">
+              <h5>Easy to customize</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                nesciunt id eaque consequuntur. Officiis maiores odit in, error
+                suscipit necessitatibus aliquam? Ea, laudantium!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="conact_Us">
+      <div class="container">
+        <div class="title">
+          <h5>Contact US</h5>
+          <hr class="borderTitle" />
+          <p>Lorem ipsum dolor sit amet</p>
+        </div>
+        <form action="">
+          <div class="right">
+            <input type="text" placeholder="name" />
+            <input type="email" placeholder="email" />
+            <input type="text" placeholder="subject" />
+          </div>
+          <div class="left">
+            <textarea  rows="7" name="" id="" placeholder="Message"></textarea>
+          </div>
+        </form>
       </div>
     </section>
   </body>
