--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
   </head>
 
   <body>
+    <header>
+      <nav class="container">
+        <h4>AX <span>IT</span></h4>
+        <ul>
+          <li><a href="features">features</a></li>
+          <li><a href="About">About</a></li>
+          <li><a href="Pricing">Pricing</a></li>
+          <li><a href="Reviews">Reviews</a></li>
+          <li><a href="Contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="HeroHader">
+      <div class="container">
+        <div class="box">
+          <div class="lift">
+            <h4>AX <span>IT</span></h4>
+            <p>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</p>
+            <hr class="HeroHaderBorder">
+            <p class="dis">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+              euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+              accumsan et viverra justo commodo
+            </p>
+            <a href="" class="btn">Download</a>
+          </div>
+          <div class="conactForm"></div>
+        </div>
+      </div>
+    </section>
     <section class="socilmediaSEC">
       <div class="container">
         <div class="info">
@@ -139,7 +170,7 @@
             <input type="text" placeholder="subject" />
           </div>
           <div class="left">
-            <textarea  rows="7" name="" id="" placeholder="Message"></textarea>
+            <textarea rows="7" name="" id="" placeholder="Message"></textarea>
           </div>
         </form>
       </div>
