Update Sec Sub-list-section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="lift">
             <h4>AX <span>IT</span></h4>
             <p>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</p>
-            <hr class="HeroHaderBorder">
+            <hr class="HeroHaderBorder" />
             <p class="dis">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
               euismod bibendum laoreet. Proin gravida dolor sit amet lacus
@@ -49,7 +49,15 @@
             </p>
             <a href="" class="btn">Download</a>
           </div>
-          <div class="conactForm"></div>
+          <div class="conactForm">
+            <h3>Try Your <span>FREE</span> Trial Today</h3>
+            <form action="">
+              <input type="text" placeholder="name" />
+              <input type="email" placeholder="Email" />
+              <input type="password" placeholder="Passwprd" />
+              <button type="submit">Get Started</button>
+            </form>
+          </div>
         </div>
       </div>
     </section>
@@ -72,6 +80,59 @@
             <li><i class="fa-solid fa-wifi"></i></li>
             <li><i class="fa-brands fa-windows"></i></li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="Sub-list-section">
+      <div class="container">
+        <div class="Box">
+          <div class="card">
+            <img
+              src="https://www.freetemplates.pro/demo/axit/images/sec1.png"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <div class="title">
+              <h3>Sub list section</h3>
+              <hr class="borderTitle" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                accumsan et viverra justo commodo.
+              </p>
+            </div>
+
+            <div class="row">
+              <div class="icon">
+                <i class="fa fa-cloud-upload" aria-hidden="true"></i>
+              </div>
+              <div class="info">
+                <h5>Title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aenean euismod bibendum laoreet.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="icon">
+                <i class="fa fa-cloud-upload" aria-hidden="true"></i>
+              </div>
+              <div class="info">
+                <h5>Title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aenean euismod bibendum laoreet.
+                </p>
+              </div>
+            </div>
+
+
+
+
+          </div>
         </div>
       </div>
     </section>
